# UPPRPO

./: .gitignore
.github/workflows/: cmake-single-platform.yml
lab1/: CMakeLists.txt  main.cpp
